--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -12,20 +12,8 @@
     "def track_changes_with_details(master_df, gha_mom, mom_open_pos, current_month, gha_columns, open_pos_columns):\n",
     "    \"\"\"\n",
     "    Tracks changes with details like source, month of change, and reason.\n",
-    "\n",
-    "    Args:\n",
-    "    - master_df (DataFrame): The merged master DataFrame.\n",
-    "    - gha_mom (DataFrame): The month-specific GHA data.\n",
-    "    - mom_open_pos (DataFrame): The month-specific Open Positions data.\n",
-    "    - current_month (str): The current month (e.g., 'Jan-24').\n",
-    "    - gha_columns (list): Columns to check for GHA source.\n",
-    "    - open_pos_columns (list): Columns to check for Open Positions source.\n",
-    "\n",
-    "    Returns:\n",
-    "    - master_df (DataFrame): The updated master DataFrame.\n",
-    "    - updated_records_df (DataFrame): Consolidated DataFrame of updated records for the month.\n",
     "    \"\"\"\n",
-    "    # Ensure Position ID and Employee ID are strings for consistency\n",
+    "    # Ensure IDs are strings for consistency\n",
     "    master_df['Position ID'] = master_df['Position ID'].astype(str)\n",
     "    master_df['Employee ID'] = master_df['Employee ID'].astype(str)\n",
     "    gha_mom['Position ID'] = gha_mom['Position ID'].astype(str)\n",
@@ -39,6 +27,9 @@
     "                                    (master_df['Employee ID'] == row['Employee ID'])]\n",
     "\n",
     "        if not match_in_master.empty:\n",
+    "            # Debug match\n",
+    "            print(f\"GHA Match found for Position ID: {row['Position ID']}\")\n",
+    "\n",
     "            # Check for changes in GHA columns\n",
     "            changes = []\n",
     "            for col in gha_columns:\n",
@@ -53,7 +44,8 @@
     "                    'Month of Change': current_month,\n",
     "                    'Reason of Change': reason\n",
     "                })\n",
-    "        elif current_month != 'Jan-24':  # Ignore new records for base month\n",
+    "        elif current_month != 'Jan-24':  # Exclude new GHA records in base month\n",
+    "            print(f\"New GHA record found for Position ID: {row['Position ID']}\")\n",
     "            updated_records.append({\n",
     "                **row.to_dict(),\n",
     "                'Source': 'GHA',\n",
@@ -66,6 +58,8 @@
     "        match_in_master = master_df[master_df['Position ID'] == row['Position ID']]\n",
     "\n",
     "        if not match_in_master.empty:\n",
+    "            print(f\"Open Pos Match found for Position ID: {row['Position ID']}\")\n",
+    "\n",
     "            # Check for changes in Open Positions columns\n",
     "            changes = []\n",
     "            for col in open_pos_columns:\n",
@@ -81,7 +75,7 @@
     "                    'Reason of Change': reason\n",
     "                })\n",
     "        else:\n",
-    "            # New record for Open Positions\n",
+    "            print(f\"New Open Pos record found for Position ID: {row['Position ID']}\")\n",
     "            updated_records.append({\n",
     "                **row.to_dict(),\n",
     "                'Source': 'Open Positions',\n",
@@ -89,22 +83,22 @@
     "                'Reason of Change': 'New Record'\n",
     "            })\n",
     "\n",
-    "    # Convert updated records to DataFrame\n",
+    "    # Convert to DataFrame\n",
     "    updated_records_df = pd.DataFrame(updated_records)\n",
     "\n",
-    "    # Remove duplicate changes already captured\n",
+    "    # Remove duplicates already captured in master_df\n",
     "    if not updated_records_df.empty:\n",
     "        previous_changes = master_df[['Position ID', 'Reason of Change']].drop_duplicates()\n",
     "        updated_records_df = updated_records_df.merge(previous_changes, on=['Position ID', 'Reason of Change'], how='left', indicator=True)\n",
     "        updated_records_df = updated_records_df[updated_records_df['_merge'] == 'left_only'].drop(columns=['_merge'])\n",
     "\n",
-    "    # Update master_df with new records\n",
+    "    # Update master_df\n",
     "    master_df = pd.concat([master_df, updated_records_df], ignore_index=True).drop_duplicates()\n",
     "\n",
     "    return master_df, updated_records_df\n",
     "\n",
     "\n",
-    "# Define columns to check\n",
+    "# Example data and configuration\n",
     "columns_to_check_gha = ['Global Career Band', 'BF Level 4 Name', 'Work Location Country/Territory Name', 'Work Location City']\n",
     "columns_to_check_open_pos = ['Global Career Band', 'BF Level 4 Name', 'Work Location Country/Territory Name']\n",
     "\n",
@@ -114,22 +108,20 @@
     "\n",
     "for month in months:\n",
     "    # Load the monthly GHA and Open Positions files\n",
-    "    gha_mom = pd.read_csv(f'gha_mom_{month}.csv')  # Replace with actual file paths\n",
-    "    mom_open_pos = pd.read_csv(f'mom_open_pos_{month}.csv')  # Replace with actual file paths\n",
+    "    gha_mom = pd.read_csv(f'gha_mom_{month}.csv')  # Ensure correct file paths\n",
+    "    mom_open_pos = pd.read_csv(f'mom_open_pos_{month}.csv')  # Ensure correct file paths\n",
     "\n",
-    "    # Track changes for the month\n",
+    "    print(f\"Processing month: {month}\")\n",
     "    master_df, updated_records = track_changes_with_details(\n",
     "        master_df, gha_mom, mom_open_pos, month, columns_to_check_gha, columns_to_check_open_pos\n",
     "    )\n",
     "    all_updated_records.append(updated_records)\n",
     "\n",
-    "# Combine all updated records\n",
+    "# Combine and save updated records\n",
     "final_updated_records_df = pd.concat(all_updated_records, ignore_index=True)\n",
-    "\n",
-    "# Write the consolidated DataFrame to an Excel file\n",
     "final_updated_records_df.to_excel('final_updated_records_with_details.xlsx', sheet_name='All_Updates', index=False)\n",
     "\n",
-    "print(\"All updated records with details saved to 'final_updated_records_with_details.xlsx'\")\n"
+    "print(\"Updated records saved to 'final_updated_records_with_details.xlsx'\")\n"
    ]
   },
   {
