--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -9,119 +9,134 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "def track_changes_with_details(master_df, gha_mom, mom_open_pos, current_month, gha_columns, open_pos_columns):\n",
+    "def track_changes(master_df, gha_mom, open_pos_mom, columns_to_check_gha, columns_to_check_open_pos, current_month):\n",
     "    \"\"\"\n",
-    "    Tracks changes with details like source, month of change, and reason.\n",
+    "    Tracks changes in Position ID and Employee ID across the GHA and Open Positions MoM files.\n",
+    "    \n",
+    "    Args:\n",
+    "    - master_df (DataFrame): The base master DataFrame (Jan-24).\n",
+    "    - gha_mom (DataFrame): The month-specific GHA data.\n",
+    "    - open_pos_mom (DataFrame): The month-specific Open Positions data.\n",
+    "    - columns_to_check_gha (list): Columns to check for GHA records.\n",
+    "    - columns_to_check_open_pos (list): Columns to check for Open Positions records.\n",
+    "    - current_month (str): Current month for tracking purposes (e.g., 'Feb-24').\n",
+    "\n",
+    "    Returns:\n",
+    "    - changes_df (DataFrame): A DataFrame containing all the changes.\n",
     "    \"\"\"\n",
-    "    # Ensure IDs are strings for consistency\n",
+    "    # Initialize an empty list to store changes\n",
+    "    changes = []\n",
+    "\n",
+    "    # Convert Position ID and Employee ID to string type for consistency\n",
     "    master_df['Position ID'] = master_df['Position ID'].astype(str)\n",
     "    master_df['Employee ID'] = master_df['Employee ID'].astype(str)\n",
     "    gha_mom['Position ID'] = gha_mom['Position ID'].astype(str)\n",
-    "    mom_open_pos['Position ID'] = mom_open_pos['Position ID'].astype(str)\n",
+    "    open_pos_mom['Position ID'] = open_pos_mom['Position ID'].astype(str)\n",
     "\n",
-    "    updated_records = []\n",
-    "\n",
-    "    # Process GHA records\n",
+    "    # Processing GHA records (with Position ID and Employee ID)\n",
     "    for _, row in gha_mom.iterrows():\n",
-    "        match_in_master = master_df[(master_df['Position ID'] == row['Position ID']) &\n",
-    "                                    (master_df['Employee ID'] == row['Employee ID'])]\n",
+    "        position_id = row['Position ID']\n",
+    "        employee_id = row['Employee ID']\n",
+    "        \n",
+    "        # Find the corresponding record in the master dataframe\n",
+    "        match_in_master = master_df[(master_df['Position ID'] == position_id) & \n",
+    "                                     (master_df['Employee ID'] == employee_id)]\n",
     "\n",
     "        if not match_in_master.empty:\n",
-    "            # Debug match\n",
-    "            print(f\"GHA Match found for Position ID: {row['Position ID']}\")\n",
-    "\n",
-    "            # Check for changes in GHA columns\n",
-    "            changes = []\n",
-    "            for col in gha_columns:\n",
+    "            # Check for changes in specific columns\n",
+    "            changes_detected = []\n",
+    "            for col in columns_to_check_gha:\n",
     "                if row[col] != match_in_master.iloc[0][col]:\n",
-    "                    changes.append(col)\n",
-    "\n",
-    "            if changes:\n",
-    "                reason = \"; \".join([f\"{col} Changed\" for col in changes])\n",
-    "                updated_records.append({\n",
-    "                    **row.to_dict(),\n",
+    "                    changes_detected.append(f\"{col} Changed\")\n",
+    "            \n",
+    "            # If changes detected, append the record\n",
+    "            if changes_detected:\n",
+    "                changes.append({\n",
+    "                    'Position ID': position_id,\n",
+    "                    'Employee ID': employee_id,\n",
     "                    'Source': 'GHA',\n",
     "                    'Month of Change': current_month,\n",
-    "                    'Reason of Change': reason\n",
+    "                    'Reason of Change': \"; \".join(changes_detected)\n",
     "                })\n",
-    "        elif current_month != 'Jan-24':  # Exclude new GHA records in base month\n",
-    "            print(f\"New GHA record found for Position ID: {row['Position ID']}\")\n",
-    "            updated_records.append({\n",
-    "                **row.to_dict(),\n",
+    "        else:\n",
+    "            # If no match, it’s a new record from GHA\n",
+    "            changes.append({\n",
+    "                'Position ID': position_id,\n",
+    "                'Employee ID': employee_id,\n",
     "                'Source': 'GHA',\n",
     "                'Month of Change': current_month,\n",
     "                'Reason of Change': 'New Record'\n",
     "            })\n",
     "\n",
-    "    # Process Open Positions records\n",
-    "    for _, row in mom_open_pos.iterrows():\n",
-    "        match_in_master = master_df[master_df['Position ID'] == row['Position ID']]\n",
+    "    # Processing Open Positions records (only Position ID)\n",
+    "    for _, row in open_pos_mom.iterrows():\n",
+    "        position_id = row['Position ID']\n",
+    "        \n",
+    "        # Find the corresponding record in the master dataframe\n",
+    "        match_in_master = master_df[master_df['Position ID'] == position_id]\n",
     "\n",
     "        if not match_in_master.empty:\n",
-    "            print(f\"Open Pos Match found for Position ID: {row['Position ID']}\")\n",
-    "\n",
-    "            # Check for changes in Open Positions columns\n",
-    "            changes = []\n",
-    "            for col in open_pos_columns:\n",
+    "            # In Open Positions, no Employee ID is present, so we check for other attributes\n",
+    "            changes_detected = []\n",
+    "            for col in columns_to_check_open_pos:\n",
     "                if row[col] != match_in_master.iloc[0][col]:\n",
-    "                    changes.append(col)\n",
-    "\n",
-    "            if changes:\n",
-    "                reason = \"; \".join([f\"{col} Changed\" for col in changes])\n",
-    "                updated_records.append({\n",
-    "                    **row.to_dict(),\n",
+    "                    changes_detected.append(f\"{col} Changed\")\n",
+    "            \n",
+    "            # If changes detected, append the record\n",
+    "            if changes_detected:\n",
+    "                changes.append({\n",
+    "                    'Position ID': position_id,\n",
+    "                    'Employee ID': None,  # No Employee ID for Open Positions\n",
     "                    'Source': 'Open Positions',\n",
     "                    'Month of Change': current_month,\n",
-    "                    'Reason of Change': reason\n",
+    "                    'Reason of Change': \"; \".join(changes_detected)\n",
     "                })\n",
     "        else:\n",
-    "            print(f\"New Open Pos record found for Position ID: {row['Position ID']}\")\n",
-    "            updated_records.append({\n",
-    "                **row.to_dict(),\n",
+    "            # If no match, it’s a new record from Open Positions\n",
+    "            changes.append({\n",
+    "                'Position ID': position_id,\n",
+    "                'Employee ID': None,  # No Employee ID for Open Positions\n",
     "                'Source': 'Open Positions',\n",
     "                'Month of Change': current_month,\n",
     "                'Reason of Change': 'New Record'\n",
     "            })\n",
+    "    \n",
+    "    # Convert changes list to a DataFrame\n",
+    "    changes_df = pd.DataFrame(changes)\n",
     "\n",
-    "    # Convert to DataFrame\n",
-    "    updated_records_df = pd.DataFrame(updated_records)\n",
-    "\n",
-    "    # Remove duplicates already captured in master_df\n",
-    "    if not updated_records_df.empty:\n",
-    "        previous_changes = master_df[['Position ID', 'Reason of Change']].drop_duplicates()\n",
-    "        updated_records_df = updated_records_df.merge(previous_changes, on=['Position ID', 'Reason of Change'], how='left', indicator=True)\n",
-    "        updated_records_df = updated_records_df[updated_records_df['_merge'] == 'left_only'].drop(columns=['_merge'])\n",
-    "\n",
-    "    # Update master_df\n",
-    "    master_df = pd.concat([master_df, updated_records_df], ignore_index=True).drop_duplicates()\n",
-    "\n",
-    "    return master_df, updated_records_df\n",
+    "    # Remove duplicate changes if the same position_id, employee_id already has been captured in previous months\n",
+    "    if not changes_df.empty:\n",
+    "        previous_changes = master_df[['Position ID', 'Employee ID', 'Reason of Change']].drop_duplicates()\n",
+    "        changes_df = changes_df.merge(previous_changes, on=['Position ID', 'Employee ID', 'Reason of Change'], how='left', indicator=True)\n",
+    "        changes_df = changes_df[changes_df['_merge'] == 'left_only'].drop(columns=['_merge'])\n",
+    "    \n",
+    "    return changes_df\n",
     "\n",
     "\n",
-    "# Example data and configuration\n",
-    "columns_to_check_gha = ['Global Career Band', 'BF Level 4 Name', 'Work Location Country/Territory Name', 'Work Location City']\n",
-    "columns_to_check_open_pos = ['Global Career Band', 'BF Level 4 Name', 'Work Location Country/Territory Name']\n",
+    "# Example usage\n",
+    "master_df = pd.read_csv('master_file_Jan_24.csv')\n",
+    "columns_to_check_gha = ['Global Career Band', 'Work Location City', 'BF Level 4 Name']  # Example columns to check for GHA\n",
+    "columns_to_check_open_pos = ['Global Career Band', 'Work Location City', 'BF Level 4 Name']  # Example columns to check for Open Positions\n",
     "\n",
-    "# Example processing for multiple months\n",
-    "months = ['Jan-24', 'Feb-24', 'Mar-24']\n",
-    "all_updated_records = []\n",
+    "months = ['Feb-24', 'Mar-24', 'Apr-24']  # Replace with actual months\n",
+    "all_changes_df = []\n",
     "\n",
     "for month in months:\n",
     "    # Load the monthly GHA and Open Positions files\n",
-    "    gha_mom = pd.read_csv(f'gha_mom_{month}.csv')  # Ensure correct file paths\n",
-    "    mom_open_pos = pd.read_csv(f'mom_open_pos_{month}.csv')  # Ensure correct file paths\n",
+    "    gha_mom = pd.read_csv(f'gha_mom_{month}.csv')\n",
+    "    open_pos_mom = pd.read_csv(f'open_pos_mom_{month}.csv')\n",
     "\n",
-    "    print(f\"Processing month: {month}\")\n",
-    "    master_df, updated_records = track_changes_with_details(\n",
-    "        master_df, gha_mom, mom_open_pos, month, columns_to_check_gha, columns_to_check_open_pos\n",
-    "    )\n",
-    "    all_updated_records.append(updated_records)\n",
+    "    # Track changes\n",
+    "    changes_df = track_changes(master_df, gha_mom, open_pos_mom, columns_to_check_gha, columns_to_check_open_pos, month)\n",
+    "    all_changes_df.append(changes_df)\n",
     "\n",
-    "# Combine and save updated records\n",
-    "final_updated_records_df = pd.concat(all_updated_records, ignore_index=True)\n",
-    "final_updated_records_df.to_excel('final_updated_records_with_details.xlsx', sheet_name='All_Updates', index=False)\n",
+    "# Combine all changes from multiple months\n",
+    "final_changes_df = pd.concat(all_changes_df, ignore_index=True)\n",
     "\n",
-    "print(\"Updated records saved to 'final_updated_records_with_details.xlsx'\")\n"
+    "# Write the changes to an Excel file\n",
+    "final_changes_df.to_excel('changes_records.xlsx', sheet_name='Changes', index=False)\n",
+    "\n",
+    "print(\"Changes have been saved to 'changes_records.xlsx'.\")\n"
    ]
   },
   {
