--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -9,134 +9,135 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "def track_changes(master_df, gha_mom, open_pos_mom, columns_to_check_gha, columns_to_check_open_pos, current_month):\n",
+    "def track_changes_with_details(master_df, gha_mom, mom_open_pos, current_month, gha_columns, open_pos_columns):\n",
     "    \"\"\"\n",
-    "    Tracks changes in Position ID and Employee ID across the GHA and Open Positions MoM files.\n",
-    "    \n",
+    "    Tracks changes and updates based on monthly GHA and Open Position files.\n",
+    "\n",
     "    Args:\n",
-    "    - master_df (DataFrame): The base master DataFrame (Jan-24).\n",
-    "    - gha_mom (DataFrame): The month-specific GHA data.\n",
-    "    - open_pos_mom (DataFrame): The month-specific Open Positions data.\n",
-    "    - columns_to_check_gha (list): Columns to check for GHA records.\n",
-    "    - columns_to_check_open_pos (list): Columns to check for Open Positions records.\n",
-    "    - current_month (str): Current month for tracking purposes (e.g., 'Feb-24').\n",
+    "    - master_df (DataFrame): The master DataFrame containing all records.\n",
+    "    - gha_mom (DataFrame): GHA MoM data for the current month.\n",
+    "    - mom_open_pos (DataFrame): Open Position MoM data for the current month.\n",
+    "    - current_month (str): Current month (e.g., 'Jan-24').\n",
+    "    - gha_columns (list): Columns to track changes for GHA source.\n",
+    "    - open_pos_columns (list): Columns to track changes for Open Position source.\n",
     "\n",
     "    Returns:\n",
-    "    - changes_df (DataFrame): A DataFrame containing all the changes.\n",
+    "    - master_df (DataFrame): Updated master DataFrame with new and changed records.\n",
+    "    - changes_df (DataFrame): DataFrame containing all changes detected.\n",
     "    \"\"\"\n",
-    "    # Initialize an empty list to store changes\n",
-    "    changes = []\n",
-    "\n",
-    "    # Convert Position ID and Employee ID to string type for consistency\n",
+    "    # Ensure consistent data types\n",
     "    master_df['Position ID'] = master_df['Position ID'].astype(str)\n",
     "    master_df['Employee ID'] = master_df['Employee ID'].astype(str)\n",
     "    gha_mom['Position ID'] = gha_mom['Position ID'].astype(str)\n",
-    "    open_pos_mom['Position ID'] = open_pos_mom['Position ID'].astype(str)\n",
+    "    gha_mom['Employee ID'] = gha_mom['Employee ID'].astype(str)\n",
+    "    mom_open_pos['Position ID'] = mom_open_pos['Position ID'].astype(str)\n",
     "\n",
-    "    # Processing GHA records (with Position ID and Employee ID)\n",
+    "    changes = []\n",
+    "\n",
+    "    # Process GHA records\n",
     "    for _, row in gha_mom.iterrows():\n",
-    "        position_id = row['Position ID']\n",
-    "        employee_id = row['Employee ID']\n",
-    "        \n",
-    "        # Find the corresponding record in the master dataframe\n",
-    "        match_in_master = master_df[(master_df['Position ID'] == position_id) & \n",
-    "                                     (master_df['Employee ID'] == employee_id)]\n",
+    "        match = master_df[(master_df['Position ID'] == row['Position ID']) & \n",
+    "                          (master_df['Employee ID'] == row['Employee ID'])]\n",
     "\n",
-    "        if not match_in_master.empty:\n",
-    "            # Check for changes in specific columns\n",
-    "            changes_detected = []\n",
-    "            for col in columns_to_check_gha:\n",
-    "                if row[col] != match_in_master.iloc[0][col]:\n",
-    "                    changes_detected.append(f\"{col} Changed\")\n",
-    "            \n",
-    "            # If changes detected, append the record\n",
-    "            if changes_detected:\n",
+    "        if not match.empty:\n",
+    "            # Check for changes in specified columns\n",
+    "            change_detected = False\n",
+    "            change_reasons = []\n",
+    "            for col in gha_columns:\n",
+    "                if row[col] != match.iloc[0][col]:\n",
+    "                    change_detected = True\n",
+    "                    change_reasons.append(f\"{col} Changed\")\n",
+    "\n",
+    "            if change_detected:\n",
     "                changes.append({\n",
-    "                    'Position ID': position_id,\n",
-    "                    'Employee ID': employee_id,\n",
+    "                    **row.to_dict(),\n",
     "                    'Source': 'GHA',\n",
     "                    'Month of Change': current_month,\n",
-    "                    'Reason of Change': \"; \".join(changes_detected)\n",
+    "                    'Reason of Change': '; '.join(change_reasons)\n",
     "                })\n",
     "        else:\n",
-    "            # If no match, it’s a new record from GHA\n",
+    "            # New record\n",
     "            changes.append({\n",
-    "                'Position ID': position_id,\n",
-    "                'Employee ID': employee_id,\n",
+    "                **row.to_dict(),\n",
     "                'Source': 'GHA',\n",
     "                'Month of Change': current_month,\n",
     "                'Reason of Change': 'New Record'\n",
     "            })\n",
     "\n",
-    "    # Processing Open Positions records (only Position ID)\n",
-    "    for _, row in open_pos_mom.iterrows():\n",
-    "        position_id = row['Position ID']\n",
-    "        \n",
-    "        # Find the corresponding record in the master dataframe\n",
-    "        match_in_master = master_df[master_df['Position ID'] == position_id]\n",
+    "    # Process Open Position records\n",
+    "    for _, row in mom_open_pos.iterrows():\n",
+    "        match = master_df[master_df['Position ID'] == row['Position ID']]\n",
     "\n",
-    "        if not match_in_master.empty:\n",
-    "            # In Open Positions, no Employee ID is present, so we check for other attributes\n",
-    "            changes_detected = []\n",
-    "            for col in columns_to_check_open_pos:\n",
-    "                if row[col] != match_in_master.iloc[0][col]:\n",
-    "                    changes_detected.append(f\"{col} Changed\")\n",
-    "            \n",
-    "            # If changes detected, append the record\n",
-    "            if changes_detected:\n",
+    "        if not match.empty:\n",
+    "            # Check for changes in specified columns\n",
+    "            change_detected = False\n",
+    "            change_reasons = []\n",
+    "            for col in open_pos_columns:\n",
+    "                if col != 'Work Location City' and row[col] != match.iloc[0][col]:\n",
+    "                    change_detected = True\n",
+    "                    change_reasons.append(f\"{col} Changed\")\n",
+    "\n",
+    "            if change_detected:\n",
     "                changes.append({\n",
-    "                    'Position ID': position_id,\n",
-    "                    'Employee ID': None,  # No Employee ID for Open Positions\n",
+    "                    **row.to_dict(),\n",
     "                    'Source': 'Open Positions',\n",
     "                    'Month of Change': current_month,\n",
-    "                    'Reason of Change': \"; \".join(changes_detected)\n",
+    "                    'Reason of Change': '; '.join(change_reasons)\n",
     "                })\n",
     "        else:\n",
-    "            # If no match, it’s a new record from Open Positions\n",
+    "            # New record\n",
     "            changes.append({\n",
-    "                'Position ID': position_id,\n",
-    "                'Employee ID': None,  # No Employee ID for Open Positions\n",
+    "                **row.to_dict(),\n",
     "                'Source': 'Open Positions',\n",
     "                'Month of Change': current_month,\n",
     "                'Reason of Change': 'New Record'\n",
     "            })\n",
-    "    \n",
-    "    # Convert changes list to a DataFrame\n",
+    "\n",
+    "    # Convert changes to DataFrame\n",
     "    changes_df = pd.DataFrame(changes)\n",
     "\n",
-    "    # Remove duplicate changes if the same position_id, employee_id already has been captured in previous months\n",
+    "    # Align columns with master_df\n",
+    "    for col in master_df.columns:\n",
+    "        if col not in changes_df.columns:\n",
+    "            changes_df[col] = None  # Add missing columns with default value\n",
+    "    changes_df = changes_df[master_df.columns]  # Reorder columns to match master_df\n",
+    "\n",
+    "    # Remove duplicates already captured\n",
     "    if not changes_df.empty:\n",
     "        previous_changes = master_df[['Position ID', 'Employee ID', 'Reason of Change']].drop_duplicates()\n",
-    "        changes_df = changes_df.merge(previous_changes, on=['Position ID', 'Employee ID', 'Reason of Change'], how='left', indicator=True)\n",
+    "        previous_changes['Reason of Change'] = previous_changes['Reason of Change'].astype(str)  # Ensure consistent types\n",
+    "        changes_df = changes_df.merge(previous_changes, on=['Position ID', 'Employee ID', 'Reason of Change'], \n",
+    "                                      how='left', indicator=True)\n",
     "        changes_df = changes_df[changes_df['_merge'] == 'left_only'].drop(columns=['_merge'])\n",
-    "    \n",
-    "    return changes_df\n",
+    "\n",
+    "    # Append changes to master_df\n",
+    "    master_df = pd.concat([master_df, changes_df], ignore_index=True).drop_duplicates()\n",
+    "\n",
+    "    return master_df, changes_df\n",
     "\n",
     "\n",
     "# Example usage\n",
-    "master_df = pd.read_csv('master_file_Jan_24.csv')\n",
-    "columns_to_check_gha = ['Global Career Band', 'Work Location City', 'BF Level 4 Name']  # Example columns to check for GHA\n",
-    "columns_to_check_open_pos = ['Global Career Band', 'Work Location City', 'BF Level 4 Name']  # Example columns to check for Open Positions\n",
+    "columns_to_check_gha = ['Global Career Band', 'BF Level 4 Name', 'Work Location Country/Territory Name', 'Work Location City']\n",
+    "columns_to_check_open_pos = ['Global Career Band', 'BF Level 4 Name', 'Work Location Country/Territory Name']\n",
     "\n",
-    "months = ['Feb-24', 'Mar-24', 'Apr-24']  # Replace with actual months\n",
-    "all_changes_df = []\n",
+    "months = ['Jan-24', 'Feb-24', 'Mar-24']\n",
+    "all_changes = []\n",
     "\n",
     "for month in months:\n",
-    "    # Load the monthly GHA and Open Positions files\n",
     "    gha_mom = pd.read_csv(f'gha_mom_{month}.csv')\n",
-    "    open_pos_mom = pd.read_csv(f'open_pos_mom_{month}.csv')\n",
+    "    mom_open_pos = pd.read_csv(f'mom_open_pos_{month}.csv')\n",
     "\n",
-    "    # Track changes\n",
-    "    changes_df = track_changes(master_df, gha_mom, open_pos_mom, columns_to_check_gha, columns_to_check_open_pos, month)\n",
-    "    all_changes_df.append(changes_df)\n",
+    "    master_df, changes_df = track_changes_with_details(master_df, gha_mom, mom_open_pos, month, columns_to_check_gha, columns_to_check_open_pos)\n",
+    "    all_changes.append(changes_df)\n",
     "\n",
-    "# Combine all changes from multiple months\n",
-    "final_changes_df = pd.concat(all_changes_df, ignore_index=True)\n",
+    "# Consolidate all changes\n",
+    "final_changes_df = pd.concat(all_changes, ignore_index=True)\n",
     "\n",
-    "# Write the changes to an Excel file\n",
-    "final_changes_df.to_excel('changes_records.xlsx', sheet_name='Changes', index=False)\n",
+    "# Save the updated master_df and changes_df\n",
+    "master_df.to_excel('updated_master.xlsx', index=False)\n",
+    "final_changes_df.to_excel('changes_detected.xlsx', index=False)\n",
     "\n",
-    "print(\"Changes have been saved to 'changes_records.xlsx'.\")\n"
+    "print(\"Master file and changes file updated successfully.\")\n"
    ]
   },
   {
