--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "bd9d0c35",
+   "id": "0dd99ac1",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "8df8316c",
+   "id": "8ac34d64",
    "metadata": {
     "scrolled": true
    },
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f9be547",
+   "id": "4cba616a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -470,7 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21a1b739",
+   "id": "9ffa4b26",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -478,7 +478,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "133ab8ff",
+   "id": "b0698448",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -486,7 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74e34375",
+   "id": "2f042cf8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -494,7 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70712801",
+   "id": "b931239c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -502,7 +502,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "da90e9e9",
+   "id": "1261ae1a",
    "metadata": {},
    "outputs": [
     {
@@ -1320,7 +1320,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "3e5074e0",
+   "id": "95feca36",
    "metadata": {},
    "outputs": [
     {
@@ -1431,7 +1431,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "d1924846",
+   "id": "a68bcb0b",
    "metadata": {},
    "outputs": [
     {
@@ -1589,7 +1589,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "fb006d80",
+   "id": "b8059cd0",
    "metadata": {},
    "outputs": [
     {
@@ -1635,7 +1635,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "2071f988",
+   "id": "9b2c65bf",
    "metadata": {},
    "outputs": [
     {
@@ -1694,10 +1694,124 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63db74af",
+   "id": "05d222ca",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Dictionary of monthly files\n",
+    "monthly_files = {\n",
+    "    'Jan 24': (\"Input\\\\gha_jan_24.xlsx\", \"Input\\\\jan_24 open pos.xlsx\"),\n",
+    "    'Feb 24': (\"Input\\\\global headcount_02_24.xlsx\", \"Input\\\\feb open pos.xlsx\"),\n",
+    "    # Add more entries as needed...\n",
+    "}\n",
+    "\n",
+    "# Create combined DataFrame for all months\n",
+    "def process_all_months(master_file_path, monthly_files, output_file):\n",
+    "    # Load master file\n",
+    "    master_df = pd.read_excel(master_file_path)\n",
+    "\n",
+    "    # Initialize empty DataFrames for final output\n",
+    "    final_gha_combined = pd.DataFrame()\n",
+    "    final_open_combined = pd.DataFrame()\n",
+    "\n",
+    "    for month, (gha_file, open_pos_file) in monthly_files.items():\n",
+    "        # Load GHA and Open Position files for the month\n",
+    "        gha_df = pd.read_excel(gha_file)\n",
+    "        open_pos_df = pd.read_excel(open_pos_file)\n",
+    "\n",
+    "        # Process GHA and Open Position files against the master\n",
+    "        updated_gha, new_gha = find_updated_and_new_records(gha_df, master_df, month, 'GHA')\n",
+    "        updated_open, new_open = find_updated_and_new_records(open_pos_df, master_df, month, 'Open Position')\n",
+    "\n",
+    "        # Append processed data to the final DataFrames\n",
+    "        final_gha_combined = pd.concat([final_gha_combined, updated_gha, new_gha], ignore_index=True)\n",
+    "        final_open_combined = pd.concat([final_open_combined, updated_open, new_open], ignore_index=True)\n",
+    "\n",
+    "        # Update master for the next iteration\n",
+    "        master_df = gha_df  # Assuming GHA is the master dataset\n",
+    "\n",
+    "    # Combine GHA and Open Position into a single DataFrame\n",
+    "    final_combined_df = combine_all_records(final_gha_combined, final_open_combined)\n",
+    "\n",
+    "    # Save to Excel\n",
+    "    final_combined_df.to_excel(output_file, index=False)\n",
+    "    print(f\"Final combined data saved to {output_file}.\")\n",
+    "\n",
+    "# Function to find updated and new records\n",
+    "def find_updated_and_new_records(file_df, master_df, month, source_type):\n",
+    "    # Ensure Position ID column exists\n",
+    "    if \"Position ID\" not in file_df.columns:\n",
+    "        raise KeyError(f\"'Position ID' not found in {source_type} data for {month}.\")\n",
+    "\n",
+    "    # Identify updated and new records\n",
+    "    updated_records = []\n",
+    "    new_records = []\n",
+    "    for _, row in file_df.iterrows():\n",
+    "        position_id = row.get(\"Position ID\")\n",
+    "        master_row = master_df[master_df[\"Position ID\"] == position_id]\n",
+    "\n",
+    "        if not master_row.empty:\n",
+    "            # Check for updated columns\n",
+    "            changes = []\n",
+    "            for col in file_df.columns:\n",
+    "                if col in master_row and not pd.isna(row[col]) and row[col] != master_row[col].values[0]:\n",
+    "                    changes.append(col)\n",
+    "            if changes:\n",
+    "                updated_row = row.to_dict()\n",
+    "                updated_row[\"Month Changed\"] = month\n",
+    "                updated_row[\"Cols Changed\"] = \"; \".join(changes)\n",
+    "                updated_row[\"Source\"] = source_type\n",
+    "                updated_records.append(updated_row)\n",
+    "        else:\n",
+    "            # Add new record\n",
+    "            new_row = row.to_dict()\n",
+    "            new_row[\"Month Added\"] = month\n",
+    "            new_row[\"Source\"] = source_type\n",
+    "            new_records.append(new_row)\n",
+    "\n",
+    "    # Convert to DataFrame\n",
+    "    updated_df = pd.DataFrame(updated_records)\n",
+    "    new_df = pd.DataFrame(new_records)\n",
+    "\n",
+    "    return updated_df, new_df\n",
+    "\n",
+    "# Function to combine GHA and Open Position records\n",
+    "def combine_all_records(final_gha_combined, final_open_combined):\n",
+    "    # Add missing columns for consistency\n",
+    "    required_columns = [\n",
+    "        \"Position ID\", \"Employee ID\", \"Month Changed\", \"Cols Changed\",\n",
+    "        \"Source\", \"Month Added\", \"Col1\", \"Col2\", \"Col3\", \"ColZ\"\n",
+    "    ]\n",
+    "\n",
+    "    for col in required_columns:\n",
+    "        if col not in final_gha_combined.columns:\n",
+    "            final_gha_combined[col] = None\n",
+    "        if col not in final_open_combined.columns:\n",
+    "            final_open_combined[col] = None\n",
+    "\n",
+    "    # Align column order\n",
+    "    final_gha_combined = final_gha_combined[required_columns]\n",
+    "    final_open_combined = final_open_combined[required_columns]\n",
+    "\n",
+    "    # Add a 'Data Type' column\n",
+    "    final_gha_combined[\"Data Type\"] = \"GHA\"\n",
+    "    final_open_combined[\"Data Type\"] = \"Open Position\"\n",
+    "\n",
+    "    # Combine all records\n",
+    "    final_combined_df = pd.concat([final_gha_combined, final_open_combined], ignore_index=True)\n",
+    "\n",
+    "    return final_combined_df\n",
+    "\n",
+    "\n",
+    "# Specify master file and output file paths\n",
+    "master_file_path = \"Input\\\\master_file.xlsx\"\n",
+    "output_file = \"Output\\\\Final_Combined_Data.xlsx\"\n",
+    "\n",
+    "# Process all files\n",
+    "process_all_months(master_file_path, monthly_files, output_file)\n"
+   ]
   }
  ],
  "metadata": {
